# publaynet-mmrag

./: .gitignore  README.md  environment.yml  pyproject.toml  report.md  report.tex  requirements.txt
app/: demo.py
configs/: abl_graph.yaml  abl_hybrid.yaml  abl_image.yaml  abl_rerank.yaml  base.yaml  baseline.yaml  enhanced.yaml
dev/: diagnose_channels.py  diagnose_vlm.py  lint-fix.sh  lint.sh  make_figures.py  smoke.sh  test.sh
scripts/: 01_ingest_preprocess.py  01b_caption_regions.py  02_build_index.py  03_build_kg.py  04_run_eval.py  05_serve.py  _common.py
src/publaynet_mmrag/: __init__.py  config.py  pipeline.py  quiet.py  shutdown.py  timing.py  types.py  util.py
src/publaynet_mmrag/embed/: __init__.py  caption.py  image.py  text.py
src/publaynet_mmrag/eval/: __init__.py  build_qa.py  rag_metrics.py  retrieval_metrics.py
src/publaynet_mmrag/explain/: __init__.py  provenance.py  visualize.py
src/publaynet_mmrag/index/: __init__.py  schema.py  store.py
src/publaynet_mmrag/ingest/: __init__.py  base.py  coco_source.py  webdataset_source.py
src/publaynet_mmrag/kg/: __init__.py  build.py  extract.py  query.py
src/publaynet_mmrag/preprocess/: __init__.py  chunk.py  ocr.py  regions.py
src/publaynet_mmrag/reason/: __init__.py  generate.py  llm.py  prompts.py  vision_llm.py
src/publaynet_mmrag/retrieve/: __init__.py  multimodal_rag.py  rerank.py
tests/: test_pipeline_logic.py
